--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,7 +5,7 @@
     <title>UserList</title>
 </head>
 <body>
-<a href="@{user/new}">New</a>
+<a th:href="@{user/new}">New</a>
 <div>
     <form th:action="@{/user/search}" method="POST">
         <input type="text" name="keyword" placeholder="Tim ten...">
