--- a/src/main/resources/templates/new-user.html
+++ b/src/main/resources/templates/new-user.html
@@ -5,8 +5,12 @@
     <title>New-User</title>
 </head>
 <body>
-    <form th:action="@{/user/new}" method="post">
-
+    <form th:action="@{/user/new}" method="post" enctype="multipart/form-data">
+        <div>
+            <!-- Upload avatar           -->
+            <label>Avatar File: </label>
+            <input type="file" name="file" accept="/image/*">
+        </div>
         <div>
             <label>Name:</label>
             <input type="text" name="name"/>
