--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -5,7 +5,7 @@
     <title>Edit User</title>
 </head>
 <body>
-<form th:action="@{/user/edit}" method="post">
+<form th:action="@{/user/edit}" method="post" enctype="multipart/form-data">
   <div>
     <label> Id:</label>
     <input type="number" name="id" th:value="${user.id}" readonly>
@@ -18,6 +18,13 @@
   <div>
     <label>Age:</label>
     <input type="number" name="age" th:value="${user.age}"/>
+  </div>
+
+  <div>
+    <!-- Upload avatar           -->
+    <!--       O day dung message.properties-->
+    <label th:text="${user.avatarURL}" ></label>
+    <input type="file" name="file" accept="/image/*">
   </div>
   <div>
     <button type="submit">Submit</button>
