22/4 Thêm department, thêm quan hệ, học thêm map DTO, Pageable,

--- a/src/main/resources/templates/new-user.html
+++ b/src/main/resources/templates/new-user.html
@@ -5,21 +5,24 @@
     <title>New-User</title>
 </head>
 <body>
-    <form th:action="@{/user/new}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/user/new}" method="post" enctype="multipart/form-data" th:object="${user}">
         <div>
             <!-- Upload avatar           -->
         <!--       O day dung message.properties-->
             <label th:text="#{user.avatar.file}" ></label>
-            <input type="file" name="file" accept="/image/*">
+            <input type="file" th:field="*{file}" accept="/image/*">
         </div>
         <div>
             <label th:text="#{user.name}">:</label>
-            <input type="text" name="name"/>
+            <input type="text" th:field="*{name}"/>
+            <p th:errors="*{name}"></p>
+
         </div>
 
         <div>
             <label th:text="#{user.age}">Age:</label>
-            <input type="number" name="age"/>
+            <input type="number" th:field="*{age}"/>
+            <p th:errors="*{age}"></p>
         </div>
         <div>
             <button type="submit">Submit</button>
