--- a/src/main/resources/templates/departments.html
+++ b/src/main/resources/templates/departments.html
@@ -1,5 +1,9 @@
-<link rel="stylesheet" th:href="@{/css/style.css}" />
-
+<html layout:decorate="/template.html" xmlns:layout="http://www.w3.org/1999/xhtml">
+<head>
+	<title>Department</title>
+</head>
+<body>
+<div layout:fragment="content">
 <a th:href="@{/department/new}">New</a>
 
 <form th:action="@{/department/search}" method="get" th:object="${searchDTO}">
@@ -34,3 +38,6 @@
 		</td>
 	</tr>
 </table>
+</div>
+</body>
+</html>
