thêm kafka, thêm producer

--- a/src/main/resources/templates/hi.html
+++ b/src/main/resources/templates/hi.html
@@ -8,7 +8,7 @@
     <h1>Hello Spring MVC </h1>
     <h1>
 
-        <strong th:text="${session.username}"></strong>
+        <strong th:text="${session.user}"></strong>
     </h1>
 </body>
 </html>
